# PeerCafe

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE.md  README.md  TESTING_OVERVIEW.md  codecov.yml  package-lock.json  package.json
.github/: dependabot.yml  frontend-ci.yml
.github/workflows/: backend-ci.yml  code-quality.yml  frontend-ci.yml
backend/: .coverage  .coveragerc  .flake8  .gitignore  .pylintrc  Makefile  check_code.ps1  check_code.sh  format_code.ps1  format_code.sh  main.py  pyproject.toml  requirements.yaml
backend/database/: supabase_db.py
backend/models/: login_model.py  menu_item_model.py  order_model.py  restaurant_model.py  user_model.py
backend/routes/: auth_routes.py  delivery_routes.py  menu_routes.py  order_routes.py  restaurant_routes.py
backend/scripts/: get_order.py
backend/tests/: conftest.py  test_auth_routes.py  test_basic.py  test_database.py  test_delivery_navigation_route.py  test_delivery_routes.py  test_delivery_routes_get_restaurant_coordinates.py  test_delivery_routes_helpers.py  test_main.py  test_menu_routes.py  test_models.py  test_order_helpers.py  test_order_routes.py  test_order_routes_endpoints.py  test_order_routes_helpers.py  test_order_sanitization.py  test_restaurant_routes.py
backend/utils/: geocode.py
docs/: Flow.MD  app-walkthrough.md  checkout-test-documentation.md  order-api-documentation.md  order-database-schema.md  order-id-page-test-doc.md  restaurant-details-documentation.md  restaurant-page-test-documentation.md  rubrics.md  system-test-doc.md
docs/design/: table-description.md
docs/test-documentation/: admin-dashboard-test-doc.md  admin-restaurants-test-doc.md  login-page-test-doc.md  order-page-more-test-doc.md  order-page-unit-test-doc.md  restaurant-detail-test-doc.md
frontend/: .prettierignore  eslint.config.js  eslintrc.json  jest.config.cjs  jest.setup.js  next.config.ts  package-lock.json  package.json  test-utils.tsx
frontend/__tests__/: admin-orders.actions.test.tsx  admin-orders.empty.test.tsx  admin-orders.test.tsx  page.test.tsx
scripts/: run_all_tests.ps1  run_all_tests.sh
(+91 files in other folders)
